--- a/StudyCSharp.csproj
+++ b/StudyCSharp.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Classwork\Figurs\Triangle.cs" />
     <Compile Include="Classwork\Word\WordCount.cs" />
     <Compile Include="Homework\Hmw10Apr.cs" />
+    <Compile Include="Homework\Hmw26Aprl.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
