Добавил более дешевую проверку сравнения Хэш-кода объектов

--- a/StudyCSharp.csproj
+++ b/StudyCSharp.csproj
@@ -53,6 +53,8 @@
     <Compile Include="Classwork\Human\Student.cs" />
     <Compile Include="Classwork\Figurs\Triangle.cs" />
     <Compile Include="Classwork\Word\WordCount.cs" />
+    <Compile Include="Homework\Book\Book.cs" />
+    <Compile Include="Homework\Book\MenegerBook.cs" />
     <Compile Include="Homework\Hmw10Apr.cs" />
     <Compile Include="Homework\Hmw17Aprl.cs" />
     <Compile Include="Homework\Hmw26Aprl.cs" />
