--- a/StudyCSharp.csproj
+++ b/StudyCSharp.csproj
@@ -54,18 +54,23 @@
     <Compile Include="Classwork\Figurs\Triangle.cs" />
     <Compile Include="Classwork\Word\WordCount.cs" />
     <Compile Include="Homework\C_HW_modul_02.cs" />
-    <Compile Include="Homework\Book\Book.cs" />
-    <Compile Include="Homework\Book\MenegerBook.cs" />
+    <Compile Include="Homework\C_HW_modul_05\Book.cs" />
+    <Compile Include="Homework\C_HW_modul_05\MenegerBook.cs" />
     <Compile Include="Homework\C_HW_modul_01.cs" />
     <Compile Include="Homework\C_HW_modul_03_part_01.cs" />
-    <Compile Include="Homework\Hmw26Aprl.cs" />
+    <Compile Include="Homework\C_HW_modul_03_part_02.cs" />
     <Compile Include="Homework\C_HW_modul_03_part_01Journal.cs" />
+    <Compile Include="Homework\C_HW_modul_06\Device.cs" />
+    <Compile Include="Homework\C_HW_modul_06\Money.cs" />
+    <Compile Include="Homework\C_HW_modul_06\Worker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Homework\Morze\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
