Чутка поправил MorseToText

--- a/StudyCSharp.csproj
+++ b/StudyCSharp.csproj
@@ -63,14 +63,13 @@
     <Compile Include="Homework\C_HW_modul_06\Device.cs" />
     <Compile Include="Homework\C_HW_modul_06\Money.cs" />
     <Compile Include="Homework\C_HW_modul_06\Worker.cs" />
+    <Compile Include="Homework\Morze\Morse.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Homework\Morze\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
